--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "devDependencies": {
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.4",
     "node-sass": "^4.11.0"
   }
 }
